fix card spacing

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -18,7 +18,7 @@
 
 .main__card-wrap {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding: 0;
   /* gap: 16px; */
   margin: 32px 0px 64px;
